feat: add_job script and flush_output unit proof

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,17 @@ list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/llvmir)
 include(LLVMIRUtil)
 include(CTest)
 
-# Enable CTest
+#boost version >= 1.71 because of https: // github.com/boostorg/hana/issues/446
+set(Boost_USE_STATIC_LIBS ${SEAHORN_STATIC_EXE})
+find_package(Boost 1.71 REQUIRED)
+if (Boost_FOUND)
+  include_directories (${Boost_INCLUDE_DIRS})
+  if(NOT LLVM_ENABLE_EH)
+    add_definitions(-DBOOST_NO_EXCEPTIONS)
+  endif()
+endif ()
+
+#Enable CTest
 enable_testing()
 
 if (CMAKE_SOURCE_DIR STREQUAL CMAKE_BINARY_DIR )
@@ -14,7 +24,7 @@ if (CMAKE_SOURCE_DIR STREQUAL CMAKE_BINARY_DIR )
     "In-source builds are not allowed. Please clean your source tree and try again.")
 endif()
 
-# Default is release with debug info
+#Default is release with debug info
 if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE RelWithDebInfo CACHE STRING
     "Choose the type of build, options are: None Debug Release RelWithDebInfo MinSizeRel." FORCE)
@@ -41,9 +51,9 @@ set(VERIFY_CMD ${CMAKE_CURRENT_BINARY_DIR}/verify)
 include_directories(BEFORE ${CMAKE_CURRENT_BINARY_DIR}/include)
 
 include_directories(seahorn/trusty_common/include)
-# TODO: Don't include at global level
-# I don't get why we have two directories trusty_common and trusty
-# and why is trusty included as an implicit dep of trusty_common
+#TODO : Don't include at global level
+#I don't get why we have two directories trusty_common and trusty
+#and why is trusty included as an implicit dep of trusty_common
 if (HANDLE_TYPE_IS_PTR)
   include_directories(seahorn/trusty/user/base/lib/libc-trusty-ptr)
 else ()
