fix: temp dir path

--- a/seahorn/sea.yaml
+++ b/seahorn/sea.yaml
@@ -40,7 +40,7 @@ verify_options:
   '-S': ''
 # keep intermediate results for debugging 
   keep-temps: ''
-  temp-dir: /tmp/verifyTrusty_sid
+  temp-dir: /tmp/verify-mbedtls
 # time and result stats
   horn-stats: true
 # Use smtfd tactic
