--- a/seahorn/sea_cex_base.yaml
+++ b/seahorn/sea_cex_base.yaml
@@ -40,11 +40,11 @@ verify_options:
   '-S': ''
 # keep intermediate results for debugging 
   keep-temps: ''
-  temp-dir: /tmp/verifyTrusty_sid
+  temp-dir: /tmp/verify-mbedtls
 # time and result stats
   horn-stats: true
 # produce counterexample harness
-  cex: /tmp/verifytrusty_sid/h.ll
+  cex: /tmp/verify-mbedtls/h.ll
 # printable counterexample log
   log: cex
 # number of words to unroll symbolic memcpy for array-based memory representation
