--- a/seahorn/sea_base.yaml
+++ b/seahorn/sea_base.yaml
@@ -40,6 +40,6 @@ verify_options:
   '-S': ''
 # keep intermediate results for debugging 
   keep-temps: ''
-  temp-dir: /tmp/verifyTrusty_sid
+  temp-dir: /tmp/verify-mbedtls
 # time and result stats
   horn-stats: true
