--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          token: ${{ secrets.CI_TOKEN }}
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
           submodules: recursive
 
       # Update references
