--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,11 +20,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           submodules: recursive
 
       # Update references
-      - name: Git Sumbodule Update
+      - name: Git Submodule Update
         run: |
           git pull --recurse-submodules
           git submodule update --remote --recursive
