--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
           git config --global user.name 'Git bot'
           git config --global user.email 'bot@noreply.github.com'
           git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
-          git commit -am "Github actions updated submodule refs" && git push || echo "No changes to commit"
+          git commit -am "feat(bot): github actions updated submodule refs" && git push || echo "No changes to commit"
 
       - name: Get type
         id: type
