feat: added three ownsem jobs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,9 +40,26 @@ set(CPPSTDLIB "libc++" CACHE STRING "C++ std library to use")
 
 set(MBEDTLS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/mbedtls)
 set(MBEDTLS_MOD_DIR ${CMAKE_CURRENT_SOURCE_DIR}/mbedtls_mod)
+set(MBEDTLS_MOD2_DIR ${CMAKE_CURRENT_SOURCE_DIR}/mbedtls_mod2)
 set(SEAMOCK_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/seamock/src)
 
 set(SEA_LIB ${CMAKE_CURRENT_SOURCE_DIR}/seahorn/lib)
+
+set(USE_SHADOW "0" CACHE STRING "Use shadow memory instead of main memory (for benchmarking). Default is 0.")
+set(NUM_OUT_RECORDS "2" CACHE STRING "Number of outgoing records (for benchmarking). Must be >=2.")
+math(EXPR NUM_OUT_RECORDS_NUM "${NUM_OUT_RECORDS}" OUTPUT_FORMAT DECIMAL)
+if(NOT NUM_OUT_RECORDS_NUM GREATER_EQUAL 2)
+  message(FATAL_ERROR "Number of output records must be >=2 for benchmarking!")
+endif()
+set(NUM_SSL_CTX "2" CACHE STRING "Number of ssl ctx (for benchmarking). Must be >=2.")
+set(NUM_FLIGHT_APPEND_OPS "4" CACHE STRING "Number of flight append operations (for benchmarking). Must be >=2.")
+math(EXPR NUM_FLIGHT_APPEND_OPS_NUM "${NUM_FLIGHT_APPEND_OPS}" OUTPUT_FORMAT DECIMAL)
+if(NOT NUM_FLIGHT_APPEND_OPS_NUM GREATER_EQUAL 2)
+  message(FATAL_ERROR "Number of flight append ops must be >=2 for benchmarking!")
+endif()
+
+
+#add_definitions(-DOWNSEM_BORCHK)  # add borrow check sasserts
 
 configure_file(verify.py.in verify @ONLY)
 set(VERIFY_CMD ${CMAKE_CURRENT_BINARY_DIR}/verify)
