--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,5 +51,6 @@ jobs:
         id: cores
         run: echo "::set-output name=num_cores::$(nproc --all)"
 
-      - name: Run Tests
-        run: docker run -t verify-mbedtls /bin/bash -c "cd build && mkdir -p /tmp/verify-mbedtls && env VERIFY_FLAGS=\"${{ matrix.verify_flag }}\" ctest -j ${{steps.cores.outputs.num_cores}} --output-on-failure --timeout 2000 -E \"${{ steps.exclude_files.outputs.exclude_files }}\""
+      # Do not run tests  
+      #- name: Run Tests
+      #  run: docker run -t verify-mbedtls /bin/bash -c "cd build && mkdir -p /tmp/verify-mbedtls && env VERIFY_FLAGS=\"${{ matrix.verify_flag }}\" ctest -j ${{steps.cores.outputs.num_cores}} --output-on-failure --timeout 2000 -E \"${{ steps.exclude_files.outputs.exclude_files }}\""
