fix: account for refactor
header files moved in mbedtls

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,5 +65,8 @@ set(VERIFY_CMD ${CMAKE_CURRENT_BINARY_DIR}/verify)
 include_directories(BEFORE ${CMAKE_CURRENT_BINARY_DIR}/seahorn/include/
                            ${SEAHORN_ROOT}/include
                            ${MBEDTLS_DIR}/include/mbedtls
-                           ${MBEDTLS_DIR}/tf-psa-crypto/include/)             
+                           ${MBEDTLS_DIR}/tf-psa-crypto/include/
+                           ${MBEDTLS_DIR}/tf-psa-crypto/core/
+                           ${MBEDTLS_DIR}/tf-psa-crypto/drivers/builtin/include/
+                           ${MBEDTLS_DIR}/tf-psa-crypto/drivers/builtin/src/)             
 add_subdirectory(seahorn)
